--- a/SVM_Voice_JULY2024.ipynb
+++ b/SVM_Voice_JULY2024.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqjZpSU0hPyDe4S0rQPwsu",
+      "authorship_tag": "ABX9TyPf3D8yMuN3kqL6RRw95VM4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1002,6 +1002,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Benefits of Cross-Validation**\n",
+        "* Provides a more reliable estimate of model performance.\n",
+        "* Helps in identifying and avoiding overfitting.\n",
+        "* Useful for model comparison and selection.\n",
+        "* Aids in hyperparameter tuning."
+      ],
+      "metadata": {
+        "id": "Q-63f-LzOGYh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Sb6q4UqAOPSW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
